css/general.css
/* 
---1-typography system
-FONT SIZE SYSTEM (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

-font weights:
default:400
medium:500
semi bold:600
bold:700

-line heights:
default:1
small:1.05
paragraph default:1.6

-letter spacing:
-0.5px
0.75px

---2-colors
primary:#e67e22

tints:#fdf2e9,#fae5d3

shades:##cf711f,#eb984e,#45260a

accents:

greys:
#555,#333,#6f6f6f,#888,#767676

---3-shadows
0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);

---4-border radius
default:9px,11px

---5-whitespace
-SPACING SYSTEM (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
  overflow-x: hidden;
}
body {
  font-family: "Rubik", sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #555;
  overflow-x: hidden;
}
/*******************************************/
/* General components */
/*******************************************/
.heading-primary,
.heading-secondary,
.heading-tertiary {
  font-weight: 700;
  letter-spacing: -0.5px;
  color: #333;
}
.heading-primary {
  font-size: 5.2rem;
  line-height: 1.05;
  margin-bottom: 3.2rem;
}
.heading-secondary {
  font-size: 4.4rem;
  line-height: 1.2;
  margin-bottom: 9.6rem;
}
.heading-tertiary {
  font-size: 3rem;
  line-height: 1.2;
  margin-bottom: 3.2rem;
}
.subheading {
  display: block;
  font-size: 1.6rem;
  font-weight: 500;
  color: #cf711f;
  text-transform: uppercase;
  margin-bottom: 1.6rem;
  letter-spacing: 0.75px;
}
.btn,
.btn:link,
.btn:visited {
  font-size: 2rem;
  color: #fff;
  font-weight: 600;
  display: inline-block;
  padding: 1.6rem 3.2rem;
  text-decoration: none;
  border-radius: 9px;
  transition: all 0.3s ease-in-out;
  border: none;
  cursor: pointer;
  font-family: inherit;
}
.btn--full:link,
.btn--full:visited {
  background-color: #e67e22;
}
.btn--full:hover,
.btn--full:active {
  background-color: #cf711f;
}
.btn--outline:link,
.btn--outline:visited {
  background-color: #fff;
  color: #555;
}
.btn--outline:hover,
.btn--outline:active {
  background-color: #fdf2e9;
  box-shadow: 0 0 0 3px #fff inset;
}
.link:link,
.link:visited {
  color: #e67e22;
  text-decoration: none;
  border-bottom: 1px solid currentColor;
  display: inline-block;
  padding-bottom: 0.2rem;
  transition: all 0.3s ease-in-out;
}
.link:hover,
.link:active {
  color: #cf711f;
  border-bottom: 1px solid transparent;
}
.btn-form {
  background-color: #45260a;
  font-size: 1.8rem;
  color: #fdf2e9;
  align-self: end;
  padding: 1.2rem;
}
.btn-form:hover {
  background-color: #fff;
  color: #555;
}
.margin-right-sm {
  margin-right: 1.6rem !important;
}
.margin-bottom-md {
  margin-bottom: 4.8rem !important;
}
.container {
  max-width: 120rem;
  padding: 0 3.2rem;
  margin: 0 auto;
}
.grid {
  display: grid;
  row-gap: 9.6rem;
  column-gap: 6.4rem;
}
.grid:not(:last-child) {
  margin-bottom: 9.6rem;
}
.grid-center-v {
  align-items: center;
}
.grid-2-cols {
  grid-template-columns: repeat(2, 1fr);
}
.grid-3-cols {
  grid-template-columns: repeat(3, 1fr);
}
.grid-4-cols {
  grid-template-columns: repeat(4, 1fr);
}
.grid-5-cols {
  grid-template-columns: repeat(5, 1fr);
}
.grid-footer {
  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
}
strong {
  font-weight: 500;
}
.center-text {
  text-align: center;
}
.list {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
  line-height: 1.2;
}
.list-item {
  font-size: 1.8rem;
  display: flex;
  align-items: center;
  gap: 1.6rem;
}
.list-icon {
  font-size: 3rem;
  color: #e67e22;
}
*:focus {
  box-shadow: 0 0 0 8px rgb(230, 126, 34, 0.5);
}

